--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 class="titulo">Chris Brown</h1>
     <div class="img">
-        <img src="img/chris-brown_9797.jpeg" </div>
+        <img src="img/chris-brown_9797.jpeg"> </div>
 
     <section class="sobre">
         <h2 class="sub-titulo">Sobre o personagem</h2>
